<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mercacortex.decknetvisuals.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/decknet_logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/imvLogo" />

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/imvLogo"
        android:id="@+id/tilUsername"
        android:layout_marginTop="@dimen/tilMarginTop"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edtUsername"
            android:hint="@string/hintUsr"
            style="@style/Widget.AppCompat.EditText"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tilPwd"
        android:layout_below="@id/tilUsername"
        android:layout_marginTop="@dimen/tilMarginTop"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edtPwd"
            android:hint="@string/hintPwd"
            android:inputType="textPassword"
            style="@style/Widget.AppCompat.EditText"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/chbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chbRemember"
        android:layout_below="@+id/tilPwd"
        android:layout_marginTop="@dimen/chbMarginTop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chbRemember"
        android:layout_marginTop="@dimen/btnMarginTop"
        android:id="@+id/lloButtons"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button"/>
        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button"/>

    </LinearLayout>

</RelativeLayout>
